[package]
name = "college-project-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
sdl2 = { version = "0.35.2", features = ["static-link", "bundled"] }
nalgebra = "0.30.1"
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
